--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
     "scipy",
-    "pytest"
+    "pytest",
+    "scikit-learn"
 ]
 
 [tool.setuptools]
